dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
        # Populated from
        #  UKC-654TMD6R:kubernetes ahartono$ kubectl get service -n kubernetes-dashboard
        #  dashboard-metrics-scraper   ClusterIP   10.103.68.148   <none>        8000/TCP   45m
        #  kubernetes-dashboard        ClusterIP   10.98.210.6     <none>        80/TCP     45m
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
