tls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-sample-ingress
spec:
  tls:
  - hosts:
    - myapp.com
    secretName: myapp-secret-tls
  rules:
    - hosts: myapp.com
    http:
      paths:
      - path: /path1
        backend:
          serviceName: myapp-internal-service
          servicePort: 8080
      - path: /path2
        backend:
          serviceName: myapp-internal-service
          servicePort: 9090
